// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "./";

package driver;

service RunSandbox{
  rpc runSandbox (SandboxList) returns (SandboxReply) {}
}

message SandboxList{
  repeated SandboxInfo sandbox = 1;
}

message SandboxInfo{
  //sandbox name.
  string name    = 1;

  // sandbox version.
  string version = 2;

  // sandbox url.
  string url     = 3;

  // sandbox type.
  string type = 4;

}

message SandboxReply{
  //return code.
  int32 code = 1;

  //return message.
  string message = 2;
}
